--- a/logoindex.html
+++ b/logoindex.html
@@ -13,6 +13,7 @@
                     <div class="hpoint">Git</div>
                     <div class="hhub">pub</div>
                 </div>
+                <div>Github</div>
             </div>
              <div class="cell">
                <div class="YTlogo">
@@ -23,23 +24,29 @@
                     </div>
                 </div>
                 <div class="YTname">Yootube</div>
+                <div>Yootube</div>
             </div>
             </div>
         </div>
         <div class="row">
             <div class="cell">
                 <div class="XMbg">
+
                     <div class="M1"></div>
                     <div class="M2"></div>
                     <div class="M3"></div>
                     <div class="I"></div>
                 </div>
+                <div>OrangeMi</div>
             </div>
             <div class="cell">
                 <div>
                     <div class="Fblock">
+
                         <div class="F">f</div>
+
                     </div>
+                    <div>BlueF</div>
                 </div>
             </div>
         </div>
