--- a/logoindex.html
+++ b/logoindex.html
@@ -13,6 +13,7 @@
                     <div class="hpoint">Git</div>
                     <div class="hhub">pub</div>
                 </div>
+                <div>Gitpub</div>
             </div>
              <div class="cell">
                <div class="YTlogo">
@@ -24,6 +25,7 @@
                 </div>
                 <div class="YTname">Yootube</div>
             </div>
+            <div>Yootube</div>
             </div>
         </div>
         <div class="row">
@@ -34,15 +36,22 @@
                     <div class="M3"></div>
                     <div class="I"></div>
                 </div>
+                <div>OrangeMi</div>
             </div>
             <div class="cell">
                 <div>
                     <div class="Fblock">
                         <div class="F">f</div>
                     </div>
+                    <div>Facebook</div>
                 </div>
             </div>
         </div>
+                    <div class="row">
+                <div class="cell">
+                    <div><a href="./PHCSS.html">go to another page</a></div>
+                </div>
+            </div>
     </div>
 </body>
 </html>
