--- a/PHCSS.html
+++ b/PHCSS.html
@@ -66,6 +66,10 @@
             <div class="hpoint">Git</div>
             <div class="hhub">pub</div>
         </div>
+		<div><a href="./logoindex.html">go to another page</a></div>
    </div>
+
+			
+
 </body>
 </html>
