--- a/logoindex.html
+++ b/logoindex.html
@@ -25,6 +25,7 @@
                 </div>
                 <div class="YTname">Yootube</div>
             </div>
+                   <div>Yootube</div>
             </div>
         </div>
         <div class="row">
